added explicit comments throughout code as reminder and help to others viewing the repo

--- a/test.ipynb
+++ b/test.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import what we need to train our model\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -23,7 +24,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Loading the data from the directories and preprocess it for training\n"
+    "## Loading the data from the directories and preprocess it for training\n"
    ]
   },
   {
@@ -32,10 +33,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saving the datasets in variables\n",
     "train_dir = '/Users/olle/Downloads/final_symbols_split_ttv/train'\n",
     "val_dir = '/Users/olle/Downloads/final_symbols_split_ttv/val'\n",
     "test_dir = '/Users/olle/Downloads/final_symbols_split_ttv/test'\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Setting the parameters for loading the dataset"
    ]
   },
   {
@@ -44,10 +53,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameters for loading the dataset\n",
-    "batch_size = 32\n",
+    "\n",
+    "batch_size = 32 # Determines the number of images processed at once (in one batch) during training.\n",
+    "# Neural networks train more efficiently on mini-batches of data rather than on single images or the entire dataset at once.\n",
+    "\n",
+    "# Height and width defines the dimensions to which each image will be resized\n",
     "img_height = 28\n",
-    "img_width = 28"
+    "img_width = 28\n",
+    "#  Neural networks require inputs of consistent shape, so images of different sizes must be resized or cropped to match.\n",
+    "\n",
+    "#  The choice of image size affects the model's complexity. Smaller images reduce the amount of data the model has to process,\n",
+    "#  leading to faster training times but potentially less detail."
    ]
   },
   {
@@ -156,6 +172,8 @@
     "\n",
     "# cache(): Stores the dataset in memory after the first epoch\n",
     "# prefetch(): Preloads batches of data into memory while the model is training on the current batch.\n",
+    "# autotune setting: automatically chooses the best prefetching buffer size ( Its a constand provided by tensorflow )\n",
+    "\n",
     "AUTOTUNE = tf.data.AUTOTUNE\n",
     "train_dataset = train_dataset.cache().prefetch(buffer_size=AUTOTUNE)\n",
     "val_dataset = val_dataset.cache().prefetch(buffer_size=AUTOTUNE)\n",
@@ -220,11 +238,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "####  Building the Model"
+   ]
   }
  ],
  "metadata": {
