Added the construct the model part with explicit doc strings

--- a/test.ipynb
+++ b/test.ipynb
@@ -241,7 +241,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Building the Model"
+    "##  Building the Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import from keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras import Sequential\n",
+    "from keras.api.layers import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construct the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This sequential model has multiple layers that process the image data step by step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential([\n",
+    "    Conv2D(32, (3, 3), activation='relu', input_shape=(img_height, img_width, 1)),\n",
+    "    # This layer applies 32 filters (or kernels) to the input image\n",
+    "    # (3, 3): Each filter is a 3x3 matrix, sliding over the image and detecting specific patterns, like edges.\n",
+    "    # relu: ReLU (Rectified Linear Unit) introduces non-linearity, which helps the network learn complex patterns.\n",
+    "    # (img_height, img_width, 1) specifies the height and width of the input image and the number of channels. 1 indicates grayscale images\n",
+    "    MaxPooling2D(pool_size=(2, 2)),\n",
+    "    # Pooling Size (2, 2): This layer takes the maximum value in each 2x2 window, reducing the spatial dimensions by half.\n",
+    "    # For example, if the input to this layer is (28, 28), the output will be (14, 14)\n",
+    "\n",
+    "    # The purpose is to help this layer reduce the amount of computation and helps the model focus on the most important features.\n",
+    "    Conv2D(64, (3, 3), activation='relu'),\n",
+    "    # Similar to the first Conv2D layer, but with 64 filters. As the network goes deeper,\n",
+    "    # the number of filters usually increases to capture more complex patterns.\n",
+    "    MaxPooling2D(pool_size=(2, 2)),\n",
+    "    # This layer further reduces the spatial dimensions by half again, reducing the overall feature map size.\n",
+    "    Flatten(),\n",
+    "    # Converts the 2D feature maps into a 1D vector, making it ready for the fully connected dense layers\n",
+    "    # The resulting 1D vector is passed to dense layers for classification.\n",
+    "    Dense(128, activation='relu'),\n",
+    "    # 128 Units: This layer has 128 neurons, each fully connected to the previous layer\n",
+    "    # Like before, the ReLU function allows the model to learn more complex patterns by introducing non-linearity\n",
+    "    Dense(len(class_names), activation='softmax')\n",
+    "    # The number of neurons matches the number of classes in the dataset.\n",
+    "    # Each neuron represents a class, so the output is a probability distribution over all classes.\n",
+    "    # The Softmax activation function converts the output to probabilities,\n",
+    "    # where each class has a probability score that adds up to 1. This is suitable for multi-class classification.\n",
+    "])"
    ]
   }
  ],
