Defined a explicit input layer to avoid unexpected issues in more complex architectures( moved it outside of Conv2D )

--- a/test.ipynb
+++ b/test.ipynb
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras import Sequential\n",
+    "from keras import Sequential, Input\n",
     "from keras.api.layers import *"
    ]
   },
@@ -277,16 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential([\n",
-    "    Conv2D(32, (3, 3), activation='relu', input_shape=(img_height, img_width, 1)),\n",
+    "    Input(shape=(img_height, img_width, 1)),\n",
+    "    # (img_height, img_width, 1) specifies the height and width of the input image and the number of channels. 1 indicates grayscale images\n",
+    "    Conv2D(32, (3, 3), activation='relu'),\n",
     "    # This layer applies 32 filters (or kernels) to the input image\n",
     "    # (3, 3): Each filter is a 3x3 matrix, sliding over the image and detecting specific patterns, like edges.\n",
     "    # relu: ReLU (Rectified Linear Unit) introduces non-linearity, which helps the network learn complex patterns.\n",
-    "    # (img_height, img_width, 1) specifies the height and width of the input image and the number of channels. 1 indicates grayscale images\n",
     "    MaxPooling2D(pool_size=(2, 2)),\n",
     "    # Pooling Size (2, 2): This layer takes the maximum value in each 2x2 window, reducing the spatial dimensions by half.\n",
     "    # For example, if the input to this layer is (28, 28), the output will be (14, 14)\n",
