trained model by 10 epochs. with a validation accuracy of 0.085. Really bad results

--- a/test.ipynb
+++ b/test.ipynb
@@ -299,17 +299,106 @@
     "    MaxPooling2D(pool_size=(2, 2)),\n",
     "    # This layer further reduces the spatial dimensions by half again, reducing the overall feature map size.\n",
     "    Flatten(),\n",
-    "    # Converts the 2D feature maps into a 1D vector, making it ready for the fully connected dense layers\n",
+    "    # Converts the 2D feature maps into a 1D vector, making it ready for the fully connected dense layers.\n",
     "    # The resulting 1D vector is passed to dense layers for classification.\n",
     "    Dense(128, activation='relu'),\n",
     "    # 128 Units: This layer has 128 neurons, each fully connected to the previous layer\n",
-    "    # Like before, the ReLU function allows the model to learn more complex patterns by introducing non-linearity\n",
+    "    # Like before, the ReLU function allows the model to learn more complex patterns by introducing non-linearity.\n",
     "    Dense(len(class_names), activation='softmax')\n",
     "    # The number of neurons matches the number of classes in the dataset.\n",
     "    # Each neuron represents a class, so the output is a probability distribution over all classes.\n",
     "    # The Softmax activation function converts the output to probabilities,\n",
     "    # where each class has a probability score that adds up to 1. This is suitable for multi-class classification.\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compiling the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    # The Adam optimizer adjusts the model's weights to minimize the loss function.\n",
+    "    # It’s adaptive, efficient, and commonly used for deep learning tasks.\n",
+    "    loss='sparse_categorical_crossentropy',\n",
+    "    # The loss function measures the difference between the true labels and the predicted probabilities\n",
+    "    # The reason sparse is used, is because the labels are integers ( 0, 1, 2, etc ) instead of one-hot encoded vectors\n",
+    "    metrics=['accuracy']\n",
+    "    # This tracks the accuracy during training and evaluation, showing the proportion of correct predictions.\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training Dataset: helps the model learn patterns in the data.\n",
+    "\n",
+    "Validation Dataset: assesses how well the model generalizes to unseen data, acting as a quality check against overfitting.\n",
+    "\n",
+    "Epochs: control the training duration, affecting the balance between underfitting and overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 9ms/step - accuracy: 0.6875 - loss: 3.0612 - val_accuracy: 0.0849 - val_loss: 2.6370\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 9ms/step - accuracy: 0.9344 - loss: 0.2124 - val_accuracy: 0.0849 - val_loss: 2.6377\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 9ms/step - accuracy: 0.9560 - loss: 0.1387 - val_accuracy: 0.0849 - val_loss: 2.6401\n",
+      "Epoch 4/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 9ms/step - accuracy: 0.9669 - loss: 0.1043 - val_accuracy: 0.0849 - val_loss: 2.6452\n",
+      "Epoch 5/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 9ms/step - accuracy: 0.9689 - loss: 0.0963 - val_accuracy: 0.0849 - val_loss: 2.6531\n",
+      "Epoch 6/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 9ms/step - accuracy: 0.9708 - loss: 0.0946 - val_accuracy: 0.0849 - val_loss: 2.6548\n",
+      "Epoch 7/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 9ms/step - accuracy: 0.9801 - loss: 0.0665 - val_accuracy: 0.0849 - val_loss: 2.6558\n",
+      "Epoch 8/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 9ms/step - accuracy: 0.9775 - loss: 0.0780 - val_accuracy: 0.0849 - val_loss: 2.6547\n",
+      "Epoch 9/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 9ms/step - accuracy: 0.9828 - loss: 0.0568 - val_accuracy: 0.0849 - val_loss: 2.6594\n",
+      "Epoch 10/10\n",
+      "\u001b[1m1336/1336\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 9ms/step - accuracy: 0.9838 - loss: 0.0584 - val_accuracy: 0.0849 - val_loss: 2.6647\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(\n",
+    "    train_dataset,\n",
+    "    # The training dataset is the main set of data used by the model to learn the relationships between inputs and outputs.\n",
+    "    validation_data=val_dataset,\n",
+    "    # Using a validation dataset helps to prevent overfitting by allowing to monitor the model’s performance on data it hasn’t seen before.\n",
+    "    # After each epoch, the model evaluates its performance on the validation dataset,\n",
+    "    # giving an indication of how well it is generalizing to unseen data\n",
+    "    epochs=10  \n",
+    "    # With each epoch, the model updates its weights to reduce the loss based on the training data,\n",
+    "    # ideally improving its accuracy and generalization\n",
+    ")"
    ]
   }
  ],
