--- a/test.ipynb
+++ b/test.ipynb
@@ -523,6 +523,22 @@
    "source": [
     "Seems to be some questionable/incorrect images in the dataset. Judging by the misclassification output"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('number_and_symbol_recognizer.keras')"
+   ]
   }
  ],
  "metadata": {
